<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id ="@+id/input_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/activity_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_type"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_activity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>

            <TextView
                android:id ="@+id/heartrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate"
                android:textSize="21sp"/>

            <EditText
                android:id="@+id/input_heartrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>

    </ScrollView>




</LinearLayout>